--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,7 @@ streamlit>=1.36.0
 pandas>=2.2.0
 numpy>=1.26.0
 openpyxl>=3.1.2
-torch==2.2.0+cpu
+torch==2.2.0
 sentence-transformers==2.2.2
 llama-cpp-python>=0.2.80
 huggingface_hub>=0.20.0
-tqdm>=4.66.0
-requests>=2.31.0
