--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,7 @@ torch==2.2.0+cpu
 torchvision==0.17.0+cpu
 torchaudio==2.2.0+cpu
 sentence-transformers==3.0.1
+transformers==4.39.3
+huggingface_hub==0.24.6
 llama-cpp-python==0.3.2
+
